--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,11 @@
 body{
     width: 300px;
 }
+
+.inline{
+    vertical-align:middle;
+    display: inline-block;
+}
 .yt-continue-toggle {
     position: relative; width: 90px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
@@ -48,3 +53,9 @@ body{
 .yt-continue-toggle-checkbox:checked + .yt-continue-toggle-label .yt-continue-toggle-switch {
     right: 0px; 
 }
+
+
+
+/*TOOLTIP-START*/
+
+/*TOOLTIP-END*/
