--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,11 @@
 body{
-    width: 300px;
+    width: 370px;
+    font-family: 'Lato', sans-serif;
+    padding: 20px;
+}
+
+.set-width{
+    width: 300px
 }
 
 .inline{
@@ -7,6 +13,7 @@ body{
     display: inline-block;
 }
 .yt-continue-toggle {
+    padding-left: 20px;
     position: relative; width: 90px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
@@ -57,5 +64,43 @@ body{
 
 
 /*TOOLTIP-START*/
-
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+    padding: 2
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 7px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 /*TOOLTIP-END*/
